--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,13 @@
-header:
+content-folder: "./content"
+headers:
   User-Agent : "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36"
 base-url: "https://nhentai.net/g/"
 search-url: "https://nhentai.net/"
 gallery-url: "https://i.nhentai.net/galleries/"
 multi-thread: true
-overwrite: false
-storeinfo: true
+overwrite: true
+keep-info: true
+file-types:
+  - "jpg"
+  - "png"
+  - "null"
